DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Nov-15-2004 patrickh    Updated to Gadgeteer 0.20.0.
                        NEW VERSION: 0.15.0
Nov-11-2004 patrickh    Exposed gadget::EventWindow, gadget::EventWindowProxy,
                        gadget::EventWindowInterface, gadget::StringData,
                        gadget::SpeechRecogDigital, gadget::SpeechRecogString,
                        gadget::SpeechRecogDigitalProxy,
                        gadget::SpeechRecogStringProxy,
                        gadget::SpeechRecogDigitalInterface,
                        gadget::SpeechRecogStringInterface, and the constants
                        defined in gadget::PositionUnitConversion.
                        NEW VERSION: 0.14.0
Nov-06-2004 patrickh    Exposed jccl::ConfigManager, jccl::ConfigDefinition,
                        jccl::PropertyDefinition, and jccl::VarType.  Removed
                        methods that expose the underly use of CppDOM in JCCL
                        classes.
                        NEW VERSION: 0.13.0
Oct-28-2004 patrickh    The pyjutil library is now linked into the PyJuggler
                        modules that need it using dynamic linking instead of
                        static linking.
Oct-27-2004 patrickh    The configure script option --enable-boost-hacks is no
                        longer required for detection of some Boost.Python
                        installations.
Oct-26-2004 patrickh    Added support for sharing application-specific data in
                        a VR Juggler cluster configuration via a specialization
                        of cluster::UserData<T>.
                        NEW VERSION: 0.12.0
Oct-25-2004 patrickh    Added support for context-specific data in applications
                        using the OpenGL Draw Manager
                        NEW VERSION: 0.11.0
Sep-24-2004 patrickh    Sync up with Gadgeteer 0.19.0.