@@ -9,6 +9,7 @@
 // Includes ====================================================================
 #include <boost/python.hpp>
 #include <boost/cstdint.hpp>
+#include <boost/python/suite/indexing/vector_indexing_suite.hpp>
 
 // Includes ====================================================================
 #include <vpr/IO/ObjectReader.h>
@@ -156,7 +157,8 @@ void _Export_Digital()
              "Post-condition:\n"
              "The given samples are added to the buffers.\n"
              "Arguments:\n"
-             "sampleList -- The list of newly collected samples."
+             "sampleList -- The list of newly collected samples as a\n"
+             "              gadget.DigitalDataVec object."
          )
         .def("swapDigitalBuffers", &gadget::Digital::swapDigitalBuffers,
              "swapDigitalBuffers()\n"
@@ -181,5 +183,11 @@ void _Export_Digital()
     ;
 
     delete gadget_Digital_scope;
+
+    class_< std::vector<gadget::DigitalData> >("DigitalDataVec",
+        "An indexable container of gadget.DigitalData objects."
+        )
+        .def(vector_indexing_suite< std::vector<gadget::DigitalData> >())
+    ;
 
 }
