@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-15-2004 patrickh    Fixed problems with std::vector<T> instances being
+                        passed back and forth between C++ and Python.
+                        NEW VERSION: 0.15.1
 Nov-15-2004 patrickh    Updated to Gadgeteer 0.20.0.
                         NEW VERSION: 0.15.0
 Nov-11-2004 patrickh    Exposed gadget::EventWindow, gadget::EventWindowProxy,
